--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-      <h1 class="text-center">The Guessing game</h1>
+      <h1 class="text-center">The Guessing Game</h1>
 
       <p class="text-center">Pick a number from 1-100 and see if you can guess it in 10 turns or fewer.</br> 
       We'll tell you if your guess was too high or too low.</p>
@@ -30,7 +30,7 @@
   <input type="submit" value="Submit guess" class="guessSubmit btn">
 </div>
 
-<div class="resultParas">
+<div class="resultBlock">
   <p class="guesses"></p>
   <p class="lastResult"></p>
   <p class="lowOrHi"></p>
@@ -93,10 +93,18 @@ guessSubmit.addEventListener ('click', checkGuess);
 function setGameOver(){
 	guessField.disabled = 'true';
 	guessSubmit.disabled = 'true';
+
+  var resetBtnDiv = document.createElement('div');
 	resetButton = document.createElement('button');
   resetButton.textContent = 'Start New Game';
-  resetButton.style.textAlign ='center';
   resetButton.className = 'btn';
+  resetBtnDiv.style.textAlign ='center';
+  resetButton.style.color = '#fff';
+  resetButton.style.display = 'block';
+  resetButton.style.margin = '0 auto';
+
+  resetBtnDiv.appendChild(resetButton);
+  // resetButton.style.backgroundColor = '#e2e5ee';
 	document.body.appendChild(resetButton);
 	resetButton.addEventListener('click', resetGame);
 }
@@ -105,9 +113,9 @@ function resetGame(){
 	guessCount = 1;
 
 //Not sure how this function works
-	var resetParas = document.querySelectorAll('.resultParas p');
-	for (var i = 0 ; i < resetParas.length ; i++) {
-		resetParas[i].textContent = '';
+	var resultBlock = document.querySelectorAll('.resultBlock p');
+	for (var i = 0 ; i < resultBlock.length ; i++) {
+		resultBlock[i].textContent = '';
 	}
 
 	resetButton.parentNode.removeChild(resetButton);
@@ -117,7 +125,10 @@ function resetGame(){
 	guessField.value = '';
 	guessField.focus();
 
-	lastResult.style.backgroundColor = 'white';
+	lastResult.removeAttribute('style');
+  while( lastResult.hasChildNodes() ){
+    lastResult.removeChild(lastResult.lastChild);
+  }
 
 	randomNumber = Math.floor(Math.random() *100) +1;
 
